--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{BASE_TAG}}
 
+    <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-cli-addon-search.css">
   </head>
