--- a/tests/index.html
+++ b/tests/index.html
@@ -34,8 +34,7 @@
     <div id="qunit-fixture"></div>
 
     <script>
-      window.EmberCliAddonSearchENV = {{ENV}};
-      window.EmberENV = window.EmberCliAddonSearchENV.EmberENV;
+      window.EmberENV = {{EMBER_ENV}};
     </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
