--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{BASE_TAG}}
-    {{CONFIG_META}}
+    {{content-for 'head'}}
 
     <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="stylesheet" href="assets/vendor.css">
