--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ember Addons | Built With Ember</title>
-    <meta name="description" content="">
+    <meta name="description" content="Listing hundreds of modules that extend ember-cli.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
