Updates page title

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ember Addons | Built With Ember</title>
+    <title>Ember Addons</title>
     <meta name="description" content="Listing hundreds of modules that extend ember-cli.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
