Adds rss to link tag

--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,11 @@
     <title>Ember Addons</title>
     <meta name="description" content="Listing hundreds of modules that extend ember-cli.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="alternate" type="application/rss+xml" title="Ember Addons" href="http://feeds.feedburner.com/EmberAddons">
 
     {{content-for 'head'}}
 
-    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-cli-addon-search.css">
   </head>
