Adds description for search bots

--- a/app/index.html
+++ b/app/index.html
@@ -17,5 +17,9 @@
   <body>
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-cli-addon-search.js"></script>
+    <noscript>
+      <h1>Ember Addons</h1>
+      <p>Listing hundreds of modules that extend ember-cli.</p>
+    </noscript>
   </body>
 </html>
