--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/ember-cli-addon-search.css">
   </head>
   <body>
+    {{content-for 'body'}}
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-cli-addon-search.js"></script>
     <noscript>
