--- a/app/index.html
+++ b/app/index.html
@@ -23,5 +23,7 @@
       <h1>Ember Addons</h1>
       <p>Listing hundreds of modules that extend ember-cli.</p>
     </noscript>
+
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </body>
 </html>
