Forgot to add index file

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-cli-addon-search.css">
+     {{content-for 'head-footer'}}
   </head>
   <body>
     {{content-for 'body'}}
@@ -25,5 +26,7 @@
     </noscript>
 
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+    {{content-for 'body-footer'}}
   </body>
 </html>
