--- a/tests/index.html
+++ b/tests/index.html
@@ -3,45 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EmberCliAddonSearch Tests</title>
+    <title>EmberAddonsWebsite Tests</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
+    {{content-for 'test-head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/ember-cli-addon-search.css">
+    <link rel="stylesheet" href="assets/ember-addons-website.css">
     <link rel="stylesheet" href="assets/test-support.css">
+
     {{content-for 'head-footer'}}
     {{content-for 'test-head-footer'}}
-    <style>
-      #ember-testing-container {
-        position: absolute;
-        background: white;
-        bottom: 0;
-        right: 0;
-        width: 640px;
-        height: 384px;
-        overflow: auto;
-        z-index: 9999;
-        border: 1px solid #ccc;
-      }
-      #ember-testing {
-        zoom: 50%;
-      }
-    </style>
   </head>
   <body>
+
     {{content-for 'body'}}
     {{content-for 'test-body'}}
-    <div id="qunit"></div>
-    <div id="qunit-fixture"></div>
-
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
-    <script src="assets/ember-cli-addon-search.js"></script>
+    <script src="assets/ember-addons-website.js"></script>
     <script src="testem.js"></script>
     <script src="assets/test-loader.js"></script>
+
     {{content-for 'body-footer'}}
     {{content-for 'test-body-footer'}}
   </body>
