--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EmberAddonsWebsite</title>
-    <meta name="description" content="">
+    <title>Ember Addons</title>
+    <meta name="description" content="Listing hundreds of modules that extend ember-cli.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="alternate" type="application/rss+xml" title="Ember Addons" href="http://feeds.feedburner.com/EmberAddons">
 
     {{content-for 'head'}}
 
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-addons-website.css">
 
@@ -19,6 +21,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-addons-website.js"></script>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
     {{content-for 'body-footer'}}
   </body>
