Adds basic open source description so you can tab-search in Chrome

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Listing hundreds of modules that extend ember-cli.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="alternate" type="application/rss+xml" title="Ember Addons" href="http://feeds.feedburner.com/EmberAddons">
+    <link type="application/opensearchdescription+xml" rel="search" href="osdd_file.xml"/>
 
     {{content-for 'head'}}
 
