Move favicon to assets directory

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 
     {{content-for 'head'}}
 
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="assets/favicon.png">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-addons-website.css">
 
