--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,46 @@
   <body>
     {{content-for 'body'}}
 
+    <div class="ember-load-indicator">
+      <header>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6">
+            <h1 class="branding">Ember Addons</h1>
+            <div class="header-subtitle">
+              <a href="http://www.charted.co/?%7B%22dataUrl%22%3A%22http%3A%2F%2Fember-addons-server.herokuapp.com%2Fstats.csv%22%2C%22charts%22%3A%5B%7B%22type%22%3A%22line%22%2C%22title%22%3A%22Ember%20Addons%22%2C%22note%22%3A%22This%20chart%20shows%20the%20number%20of%20available%20addons%20for%20ember-cli%20on%20npmjs.com.%20http%3A%2F%2Femberaddons.com%22%7D%5D%7D" class="package-count-link">
+                Listing thousands of addons that extend Ember.js.
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-6 hidden-xs">
+            <ul class="list-inline pull-right">
+              <li><a href="https://github.com/gcollazo/ember-cli-addon-search" class="top-menu-link">Fork us</a></li>
+              <li><a href="http://feeds.feedburner.com/EmberAddons" class="top-menu-link">RSS</a></li>
+              <li class="twitter-badge-list-item">
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://emberaddons.com" data-text="Ember Addons: Listing thousands of addons that extend Ember.js and Ember CLI" data-related="BuiltWithEmber" data-count="none" data-hashtags="emberjs">Tweet</a>
+              </li>
+            </ul>
+          </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="search-wrapper">
+                <input type="text" placeholder="Filter addons" class="form-control search-field" disabled="disabled">
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="container container-loading">
+        <div class="row">
+          <div class="col-sm-12">
+            <h3 class="loading">Loading...</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-addons-website.js"></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
