Fix icon positions

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
                 <input type="text" placeholder="Filter addons" class="form-control search-field" disabled="disabled">
               </div>
             </div>
-            <div class="col-sm-3 hidden-xs">
+            <div class="col-sm-3 col-sm-push-1 hidden-xs">
               <div class='top-menu-wrapper text-center'>
                 <div class='col-sm-3'>
                   <a href="https://github.com/gcollazo/ember-cli-addon-search" class='top-menu-link'>
