--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="col-sm-6">
               <div class="search-wrapper">
-                <input type="text" placeholder="Filter addons" class="form-control search-field" disabled="disabled">
+                <input type="text" placeholder="Search addons" class="form-control search-field" disabled="disabled">
               </div>
             </div>
             <div class="col-sm-3 col-sm-push-1 hidden-xs">
