--- a/app/index.html
+++ b/app/index.html
@@ -32,21 +32,21 @@
                 <input type="text" placeholder="Search addons" class="form-control search-field" disabled="disabled">
               </div>
             </div>
-            <div class="col-sm-3 col-sm-push-1 hidden-xs">
-              <div class='top-menu-wrapper text-center'>
+            <div class="col-sm-3 hidden-xs">
+              <div class='top-menu-wrapper text-right'>
                 <div class='col-sm-3'>
                   <a href="https://github.com/gcollazo/ember-cli-addon-search" class='top-menu-link'>
-                    <i class="fa fa-github" area-hidden="true"></i>
+                    <i class="fa fa-github" area-hidden="true" title="Fork us on GitHub"></i>
                   </a>
                 </div>
                 <div class='col-sm-3'>
                   <a href="http://feeds.feedburner.com/EmberAddons" class='top-menu-link'>
-                    <i class="fa fa-rss" area-hidden="true"></i>
+                    <i class="fa fa-rss" area-hidden="true" title="RSS Feed"></i>
                   </a>
                 </div>
                 <div class="col-sm-3">
                   <a href="http://www.charted.co/?%7B%22dataUrl%22%3A%22http%3A%2F%2Fember-addons-server.herokuapp.com%2Fstats.csv%22%2C%22charts%22%3A%5B%7B%22type%22%3A%22line%22%2C%22title%22%3A%22Ember%20Addons%22%2C%22note%22%3A%22This%20chart%20shows%20the%20number%20of%20available%20addons%20for%20ember-cli%20on%20npmjs.com.%20http%3A%2F%2Femberaddons.com%22%7D%5D%7D" class='top-menu-link' target='_blank'>
-                    <i class="fa fa-line-chart" area-hidden="true"></i>
+                    <i class="fa fa-area-chart" area-hidden="true" title="Available addons graph"></i>
                   </a>
                 </div>
               </div>
