Adds initial version of service worker.
The worker is missing a cache busting strategy and it doesn't work when the user enters the app with a query string.

--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,19 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-addons-website.js"></script>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+    <script>
+
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('sw.js', {scope: '../'}).then(function(sw) {
+          // registration worked!
+          console.log('SW Registered', sw);
+        }).catch(function(err) {
+          // registration failed :(
+          console.log('SW Not Registered', err);
+        });
+      }
+    </script>
 
     {{content-for 'body-footer'}}
   </body>
