--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,9 @@
 
     {{content-for "head"}}
 
-    <link rel="shortcut icon" href="assets/favicon.png">
-    <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/ember-addons-website.css">
+    <link rel="shortcut icon" href="{{rootURL}}assets/favicon.png">
+    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/ember-addons-website.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -63,8 +63,8 @@
       </div>
     </div>
 
-    <script src="assets/vendor.js"></script>
-    <script src="assets/ember-addons-website.js"></script>
+    <script src="{{rootURL}}assets/vendor.js"></script>
+    <script src="{{rootURL}}assets/ember-addons-website.js"></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
     {{content-for "body-footer"}}
