--- a/app/index.html
+++ b/app/index.html
@@ -63,9 +63,12 @@
       </div>
     </div>
 
+    {{content-for 'snippets/google-analytics'}}
+
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-addons-website.js"></script>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+    {{content-for 'snippets/twitter-widget'}}
 
     {{content-for 'body-footer'}}
   </body>
