--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-addons-website.css">
 
+    {{content-for "snippets/perf-utils"}}
+
     {{content-for 'head-footer'}}
   </head>
   <body>
@@ -65,8 +67,16 @@
 
     {{content-for 'snippets/google-analytics'}}
 
+    <script>performance.mark("beforeVendor");</script>
     <script src="assets/vendor.js"></script>
+    <script>performance.mark("beforeApp");</script>
+    <script>
+      if (window.location.search === "?perf.profile") {
+        console.profile("initialRender");
+      }
+    </script>
     <script src="assets/ember-addons-website.js"></script>
+    <script>performance.mark("afterApp");</script>
 
     {{content-for 'snippets/twitter-widget'}}
 
