--- a/tests/index.html
+++ b/tests/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="assets/ember-addons-website.css">
     <link rel="stylesheet" href="assets/test-support.css">
 
+    {{content-for "snippets/perf-utils"}}
+
     {{content-for 'head-footer'}}
     {{content-for 'test-head-footer'}}
   </head>
